. Added a StateMachineServer, which can be instructed to load a StateMachine from a json definition file, then interact thru ezRPC with a client. This is still far from being perfect, but it 'kind of works.'